infra/kubernetes/overlays/dev/networkpolicies-allowlist.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingestion-api-to-kafka
  namespace: dev-platform-kafka
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: dev
          domain: app
          workload: ingestion-api
    ports:
    - protocol: TCP
      port: 9092
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flink-to-kafka
  namespace: dev-platform-kafka
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: dev
          domain: platform
          workload: flink
    ports:
    - protocol: TCP
      port: 9092
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-serving-api-to-kafka
  namespace: dev-platform-kafka
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: dev
          domain: app
          workload: serving-api
    ports:
    - protocol: TCP
      port: 9092
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-flink-to-app-ingestion-api
  namespace: dev-app-ingestion-api
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: dev
          domain: platform
          workload: flink
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-serving-api-to-ingestion-api
  namespace: dev-app-ingestion-api
spec:
  podSelector: {}
  policyTypes: ["Ingress"]
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          environment: dev
          domain: app
          workload: serving-api
    ports:
    - protocol: TCP
      port: 8080
